--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "publish": "git push --follow-tags origin master"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/eslint-parser": "^7.12.1",
     "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-svelte3": "^3.0.0",
     "standard-version": "^9.1.0"
   },
   "peerDependencies": {
