--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "release": "standard-version -a",
     "publish": "git push --follow-tags origin master"
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "eslint": "^6.8.0",
