--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "publish": "git push --follow-tags origin master"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.1",
+    "@babel/core": "^7.13.10",
+    "@babel/eslint-parser": "^7.13.10",
     "@babel/eslint-plugin": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "eslint": "^7.19.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-svelte3": "^3.0.0",
