--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@babel/eslint-parser": "^7.13.10",
     "@babel/eslint-plugin": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
-    "eslint": "^7.21.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-svelte3": "^3.1.2",
     "standard-version": "^9.1.0"
@@ -24,7 +23,12 @@
     "type": "git",
     "url": "git+https://github.com/kwangure/eslint-config-svelte.git"
   },
-  "keywords": ["eslint", "config", "eslintconfig"],
+  "keywords": [
+    "eslint",
+    "config",
+    "eslintconfig",
+    "svelte"
+  ],
   "author": "Kafungo Wangure",
   "license": "MIT",
   "bugs": {
