--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "An opinionated ESLint config for Svelte projects",
   "main": ".eslintrc.js",
   "scripts": {
-    "release": "standard-version -a",
-    "publish": "git push --follow-tags origin master"
+    "release-candidate": "standard-version -a --prerelease rc && npm publish --tag rc && git push --follow-tags origin master",
+    "release": "standard-version -a && npm publish && git push --follow-tags origin master"
   },
   "dependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/eslint-plugin": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-svelte3": "^3.1.2",
-    "standard-version": "^9.1.0"
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
+    "@babel/eslint-plugin": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-svelte3": "^3.2.0"
+  },
+  "devDependencies": {
+    "standard-version": "^9.3.1"
   },
   "peerDependencies": {
     "eslint": "^7.19.0"
