--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kwangure/eslint-config-svelte",
-  "version": "0.1.14-rc.0",
+  "version": "0.1.14",
   "description": "An opinionated ESLint config for Svelte projects",
   "main": ".eslintrc.js",
   "scripts": {
