--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/eslint-parser": "^7.14.7",
     "@babel/eslint-plugin": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-svelte3": "^3.2.0"
   },
