--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@babel/preset-env": "^7.14.7",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-svelte3": "^3.2.0"
+    "eslint-plugin-svelte3": "^3.2.0",
+    "eslint-plugin-typescript-sort-keys": "^1.8.0"
   },
   "devDependencies": {
     "standard-version": "^9.3.1"
