--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An opinionated ESLint config for Svelte projects",
   "main": ".eslintrc.js",
   "dependencies": {
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-svelte3": "^3.2.1"
   },
