--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@kwangure/eslint-config-svelte",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "An opinionated ESLint config for Svelte projects",
   "main": ".eslintrc.js",
+  "scripts": {
+    "release": "bumpp"
+  },
   "dependencies": {
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-svelte3": "^3.2.1"
   },
   "devDependencies": {
+    "@kwangure/eslint-config-svelte": "^0.2.3",
+    "bumpp": "^8.2.1",
     "standard-version": "^9.3.1"
   },
   "peerDependencies": {
