--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.2.3",
   "description": "An opinionated ESLint config for Svelte projects",
   "main": ".eslintrc.js",
+  "scripts": {
+    "release": "release-it"
+  },
   "dependencies": {
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-svelte3": "^3.2.1"
   },
   "devDependencies": {
-    "standard-version": "^9.3.1"
+    "release-it": "^15.4.2"
   },
   "peerDependencies": {
     "eslint": "^8.4.1"
