--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-svelte3": "^3.2.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
     "release-it": "^15.4.2"
   },
   "peerDependencies": {
