--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-sort-class-members": "^1.17.1",
-    "eslint-plugin-svelte3": "^3.2.1"
+    "eslint-plugin-svelte": "^2.32.2"
   },
   "devDependencies": {
     "release-it": "^15.4.2"
